added follow dialog, might remove it though

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <title>Welcome Home</title>
     <script src="three.js"></script>
     <script src="conf.js"></script>
+    <script src="dialog.js"></script>
     <script src="circle.js"></script>
     <script src="body.js"></script>
     <script src="cam.js"></script>
     <script src="animation.js"></script>
     <script src="controller.js"></script>
     <script src="main.js"></script>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="main_canvas" width="100%" height="100%"></canvas>
+    <canvas id="main_canvas"></canvas>
 </body>
 </html>
