a bit better now

--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
     <script src="controller.js"></script>
     <script src="main.js"></script>
 
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="main_canvas"></canvas>
+
+
+    <template id="content_template">
+
+
+
+
+    </template>
+
 </body>
 </html>
