--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="main.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 
     <link rel="stylesheet" href="style.css">
 </head>
