added new dialog system

--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
 </head>
 <body>
 
-<canvas id="main_canvas"></canvas>
+    <canvas id="main_canvas"></canvas>
 
-    <template id="content_template">
+    <template id="dialog_template">
 
+        <dialog class="body_dialog">
+            <div class="dialog_content_left"></div>
+            <div class="dialog_content_middle"></div>
+            <div class="dialog_content_right"></div>
+        </dialog>
     </template>
 
 </body>
