--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome Home</title>
+    <!--
     <script src="three.js"></script>
     <script src="conf.js"></script>
     <script src="dialog.js"></script>
@@ -19,13 +20,15 @@
     <script src="cam.js"></script>
     <script src="animation.js"></script>
     <script src="controller.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js"></script>-->
 
     <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="graphics/favicon.ico">
+    <link rel="stylesheet" href="style/style.css">
+
+    <script src="/js/lib/mt-module.js" debug="true" entry="js/main" waitForDom="true"></script>
 
 
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
