--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="graphics/favicon.ico">
     <link rel="stylesheet" href="style/style.css">
 
-    <script src="/js/lib/mt-module.js" debug="true" entry="js/main" waitForDom="true"></script>
+    <script src="/js/lib/mt-module.js" entry="js/main" waitForDom="true"></script>
 
 
 </head>
